scrollbar issue resolved

--- a/frontEnd/src/additional.css
+++ b/frontEnd/src/additional.css
@@ -1,5 +1,6 @@
 /* custom-scrollbar */
-/* .custom-scrollbar::-webkit-scrollbar {
+
+.custom-scrollbar::-webkit-scrollbar {
   width: 6px;
 }
 
